--- a/myadvisor.html
+++ b/myadvisor.html
@@ -1,39 +1,49 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Advisor</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/advisorcss.css">
     </head>
 
-    <body style="background-color: rgba(168, 166, 51, 0.281);" class="border">
+    <body style="background-color: rgba(69, 51, 168, 0.281);" class="border">
         <header>
             <h1 class="underline">My Advisor</h1>
         </header>
 
         <main>
-            <img src="image/Advisor.jpg" width="350" height="350" class="center" alt="Image">
+            <img src="image/Advisor.jpg" width="350" height="350" class="imgcenter" alt="Image">
             
             <section>
-                <p><strong>Songsakdi Rongviriyapanish</strong></p>
+                <p class="center"><strong>My Advisor : Songsakdi Rongviriyapanish</strong></p>
             </section>
 
-            <seection>
-                <p><strong>Publications</strong></p>
-                <ul>
+            <section>
+                <p class="center"><strong>Publications</strong></p>
+                <ul class="fontsize">
                     <li>Method Evaluation for Software Testability on Object Oriented Code</li>
                     <li>Refactoring Opportunity Identification Methodology for Removing Long Method Smells and Improving Code Analyzability</li>
                     <li>Safety Property Analysis of Service-Oriented IoT Based on Interval Timed Coloured Petri Nets</li>
                     <li>Changeability prediction model for java class based on multiple layer perceptron neural network</li>
                     <li>Automatic code locations identification for replacing temporary variable with query method</li>
                     <li>Modeling Code Analyzability at Method Level in J2EE Applications</li>
+                    <li>APSEC 2013 Tutorials, industry track, and postgraduate symposium: Message from the chairs</li>
+                    <li>Identifying refactoring through formal model based on data flow graph</li>
+                    <li>Using software metrics to select refactoring for long method bad smell</li>
+                    <li>Microscopic Simulation for Modeling Effects of Motorcycles on Traffic Operations at Signalized Intersection</li>
+                    <li>สถาปัตยกรรมของเครื่องมือตรวจสอบความขัดแย้งของระบบที่ออกแบบด้วยภาษา UML</li>
+                    <li>Variations sur le style architectural Pipe and Filter</li>
+                    <li>Variations on the Pipe and Filter Architectural Style</li>
+                    <li>Development environment based on LOTOS and architectural styles</li>
+                    <li>A Survey on the Maintenance of Software Structure in Thai Software Industries</li>
+                    <li>Automatic code locations identification for replacing temporary variable with query method</li>
                 </ul>
             </seection>
 
-            <seection>
+            <section>
                 <a target="_blank" href="https://www.researchgate.net/profile/Songsakdi-Rongviriyapanish">source</a>
-            </seection>
+            </section>
         </main>
     </body>
 </html>
