--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My CSTU Passport</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="../css/styles.css">
 </head>
 
 <body style="background-color: rgba(168, 166, 51, 0.281);" class="border">
@@ -15,8 +15,8 @@
     </header>
 
     <main>
-        <video src="VDO/video.mp4" width="350" height="350" controls></video>
-        <img src="image/image.jpg" width="350" height="350" class="center" alt="My Image">
+        <video src="../VDO/video.mp4" width="350" height="350" controls></video>
+        <img src="../image/image.jpg" width="350" height="350" class="center" alt="My Image">
         
         <section>
             <p><strong>About Me</strong></p>
@@ -43,9 +43,9 @@
         <section>
             <p><strong>Contact</strong></p>
             <ul>
-                <a target="_blank" href="https://www.facebook.com/field.thongthummachard/"><img src="image/facebook.png"
+                <a target="_blank" href="https://www.facebook.com/field.thongthummachard/"><img src="../image/facebook.png"
                             width="60" height="60" alt="Facebook"></a>
-                <a target="_blank" href="https://www.instagram.com/ntkk_ff/"><img src="image/ig.png" width="60" height="60"
+                <a target="_blank" href="https://www.instagram.com/ntkk_ff/"><img src="../image/ig.png" width="60" height="60"
                             alt="Instagram"></a>
             </ul>
             <p1>Tel: 091-708-7755
