--- a/html/myadvisor.html
+++ b/html/myadvisor.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Advisor</title>
-    <link rel="stylesheet" type="text/css" href="css/advisorcss.css">
+    <link rel="stylesheet" type="text/css" href="../css/advisorcss.css">
     </head>
 
     <body style="background-color: rgba(69, 51, 168, 0.281);" class="border">
@@ -13,7 +13,7 @@
         </header>
 
         <main>
-            <img src="image/Advisor.jpg" width="350" height="350" class="imgcenter" alt="Image">
+            <img src="../image/Advisor.jpg" width="350" height="350" class="imgcenter" alt="Image">
             
             <section>
                 <p class="center"><strong>My Advisor : Songsakdi Rongviriyapanish</strong></p>
