--- a/html/myActivities.html
+++ b/html/myActivities.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My CSTU Passport</title>
-    <link rel="stylesheet" type="text/css" href="css/Activities.css">
+    <link rel="stylesheet" type="text/css" href="../css/Activities.css">
     </head>
 
     <body style="background-color: rgba(168, 166, 51, 0.281);" class="border">
