--- a/index.html
+++ b/index.html
@@ -15,8 +15,24 @@
     </header>
 
     <main>
+        <aside>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="html/myAdvisor.html">myAdvisor</a>
+                </li>
+                <li>
+                    <a href="html/myActivities.html">myActivities</a>
+                </li>
+                <li>
+                    <a href="#">Activities</a>
+                </li>
+            </ul>
+        </aside>
         <video src="VDO/video.mp4" width="350" height="350" controls></video>
-        <img src="image/image.jpg" width="350" height="350" class="center" alt="My Image">
+        <img src="image/image.jpg" width="350" height="350" class="img" alt="My Image">
         
         <section>
             <p><strong>About Me</strong></p>
