--- a/index.html
+++ b/index.html
@@ -8,34 +8,30 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
-<body style="background-color: rgba(168, 166, 51, 0.281);" class="border">
+<body style="background-color: rgba(185, 185, 147, 0.281);" class="">
     <header>
         <marquee>Welcome To My CSTU Passport</marquee> 
-        <h1 class="underline">My CSTU Passport</h1>
+        <h1 class="header">My CSTU Passport</h1>
     </header>
 
     <main>
-        <aside>
+        <div>
+        <div class="menu">
             <ul>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="html/myAdvisor.html">myAdvisor</a>
-                </li>
-                <li>
-                    <a href="html/myActivities.html">myActivities</a>
-                </li>
-                <li>
-                    <a href="#">Activities</a>
-                </li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="html/myAdvisor.html">myAdvisor</a></li>
+                <li><a href="html/myActivities.html">myActivities</a></li>
+                <li><a href="#">Activities</a></li>
             </ul>
-        </aside>
-        <video src="VDO/video.mp4" width="350" height="350" controls></video>
-        <img src="image/image.jpg" width="350" height="350" class="img" alt="My Image">
+        </div>
         
-        <section>
-            <p><strong>About Me</strong></p>
+        <div class="main">
+        <video src="VDO/video.mp4" width="350" height="350" controls ></video>
+        <img src="image/image.jpg" width="350" height="350" alt="My Image">
+        </div>
+    <section class="secondary">
+        <div>
+            <h1><strong>About Me</strong></h1>
             <ul>
                 <li>Name:Nathornkrich thongthummachard</li>
                 <li>Nickname:Few</li>
@@ -44,32 +40,34 @@
                 <li>Faculty Of Science And Technology Thammasat University</li>
                 <li>Computer Science</li>
                 <li>Student ID: 6609650293</li>
-            </ul>
-        </section>
+            </ul>          
+        </div>
 
-        <section>
-            <p><strong>Hobby</strong></p>
+        <div>
+            <h1><strong>Hobby</strong></h1>
             <ul>
                 <li>Music</li>
                 <li>Football</li>
                 <li>Game</li>
             </ul>
-        </section>
+        </div>
+    </section>
 
-        <section>
-            <p><strong>Contact</strong></p>
+        <div class="secondary">
+            <h1><strong>Contact</strong></h1>
             <ul>
                 <a target="_blank" href="https://www.facebook.com/field.thongthummachard/"><img src="image/facebook.png"
                             width="60" height="60" alt="Facebook"></a>
                 <a target="_blank" href="https://www.instagram.com/ntkk_ff/"><img src="image/ig.png" width="60" height="60"
                             alt="Instagram"></a>
             </ul>
-            <p1>Tel: 091-708-7755
-            Mail: nathornkrich.thon@dome.tu.ac.th</p1>
-        </section>
+            <p>Tel: 091-708-7755 Mail:nathornkrich.thon@dome.tu.ac.th</p>
+        </div>
+        </div>
+    </div>
     </main>
    
-        <marquee>Welcome To My CSTU Passport</marquee>    
+        
 </body>
 
 </html>
