update for tablet

--- a/html/myActivities.html
+++ b/html/myActivities.html
@@ -13,7 +13,12 @@
         </header>
 
         <main>
-            
+            <div>
+                <h2 class="center">CSTU Frist Meet</h2>
+                <img src="../image/firstmeet1.jpg" width="350" height="350" alt="firstmeet1" class="right">
+                <img src="../image/firstmeet2.jpg" width="350" height="350" alt="firstmeet2" class="right">
+                <img src="../image/firstmeet3.jpg" width="350" height="350" alt="firstmeet3" class="imgcenter">
+            </div>
         </main>
     </body>
 </html>
